--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<input class="color1" type="color" name="color1" value="#ff0000">
 	<input class="color2" type="color" name="color2" value="#ffff00">
 	<h2>This will be in the background</h2>
-	<h3></h3>
+	<h3>Hi my name is Bob</h3>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
